buscando informações de .txt, .json e API, e adicionando dados a uma API via formulário

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       <button class="btn btn-warning mr-4" id="getPosts">Get API DATA</button>
     </div>
     <hr>
+
+    <!-- Aqui, aparece o retorno do fetch -->
     <div id="output"></div>
+
+    <!-- Formulário para post request -->
     <form id="addPost">
       <div class="form-group">
         <input type="text" id="title" class="form-control" placeholder="Title">
